--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ h3 {
 }
 
 .container {
-  padding: 10px 20px;
+  padding: 0 20px;
 }
 
 .visually-hidden {
@@ -34,7 +34,16 @@ h3 {
 }
 
 .cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+  gap: 1.5rem;
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.card {
+  padding: 1rem;
+  border-top: 0.8rem solid rgba(0, 0, 0, 0.7);
+  border-radius: 0.6rem;
 }
