--- a/css/modules/theme-switcher.css
+++ b/css/modules/theme-switcher.css
@@ -72,6 +72,7 @@ input[name='theme']:checked {
   cursor: default;
 }
 
+:root[data-theme='pink'],
 :root:has(input[name='theme'][value='pink']:checked) {
   --clr-body-bg: hsl(310 50% 90%);
   --clr-card-bg: hsl(310 50% 100%);
@@ -79,6 +80,7 @@ input[name='theme']:checked {
   --clr-heading: hsl(310 50% 25%);
 }
 
+:root[data-theme='blue'],
 :root:has(input[name='theme'][value='blue']:checked) {
   --clr-body-bg: hsl(209 50% 90%);
   --clr-card-bg: hsl(209 50% 100%);
@@ -86,6 +88,7 @@ input[name='theme']:checked {
   --clr-heading: hsl(209 50% 25%);
 }
 
+:root[data-theme='green'],
 :root:has(input[name='theme'][value='green']:checked) {
   --clr-body-bg: hsl(109 50% 90%);
   --clr-card-bg: hsl(109 50% 100%);
@@ -93,6 +96,7 @@ input[name='theme']:checked {
   --clr-heading: hsl(109 50% 25%);
 }
 
+:root[data-theme='dark'],
 :root:has(input[name='theme'][value='dark']:checked) {
   --clr-body-bg: hsl(209 50% 10%);
   --clr-card-bg: hsl(209 50% 5%);
